--- a/profile_card/css/style.css
+++ b/profile_card/css/style.css
@@ -17,35 +17,29 @@ a {
   text-decoration: none;
 }
 
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .wrapper {
   width: 340px;
   padding: 30px;
   background: #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   border-radius: 10px;
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
 }
-
-.wrapper .menu::after {
-  content: '';
-  display: block;
-  clear: both;
+.wrapper .menu {
+  display: flex;
+  justify-content: space-between;
 }
 
 .wrapper .menu a {
   font-size: 20px;
   color: #666;
-}
-
-.wrapper .menu a:nth-of-type(1) {
-  float: left;
-}
-
-.wrapper .menu a:nth-of-type(2) {
-  float: right;
 }
 
 .wrapper .profile {
@@ -71,12 +65,14 @@ a {
 }
 
 .wrapper .profile .btnView {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 180px;
   height: 32px;
   margin: 0 auto 20px;
   text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
-  font: bold 12px/32px 'arial';
+  font: bold 12px/1 'arial';
   color: #fff;
   border-radius: 16px;
 }
@@ -109,7 +105,8 @@ a {
 }
 
 .wrapper .others {
-  text-align: center;
+  display: flex;
+  justify-content: center;
   font-size: 0;
   margin-bottom: 20px;
 }
